--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				  
 			</div>
 			
-			<img class="block-4-1" src="img/red-1.png" width="327" height="256" alt="">	
-			<img class="block-4-2" src="img/red-1.png" width="159" height="124" alt="">	
-			<img class="block-4-3" src="img/red-1.png" width="159" height="124" alt="">	
+			<a href="#win1"><img class="block-4-1" src="img/red-1.png" width="327" height="256" alt=""></a>
+			<a href="#win2"><img class="block-4-2" src="img/red-1.png" width="159" height="124" alt=""></a>
+			<a href="#win3"><img class="block-4-3" src="img/red-1.png" width="159" height="124" alt=""></a>
 			
 		</section>
 		
@@ -73,9 +73,9 @@
 		
 			<div class="block-5">
 		
-				<img class="block-5-1" src="img/wisland-1.png" width="159" height="124" alt="">	
-				<img class="block-5-2" src="img/wisland-1.png" width="327" height="256" alt="">	
-				<img class="block-5-3" src="img/wisland-1.png" width="159" height="124" alt="">	
+				<a href="#win4"><img class="block-5-1" src="img/island-1.png" width="159" height="92" alt=""></a>	
+				<a href="#win5"><img class="block-5-2" src="img/island-2.png" width="327" height="207" alt=""></a>		
+				<a href="#win6"><img class="block-5-3" src="img/island-3.png" width="159" height="92" alt=""></a>		
 			
 			</div>
 			
@@ -123,6 +123,49 @@
 		
 	</main>
 
+<!--МОДАЛЬНЫЕ ОКНА-->
+
+<!-- Модальное окно №1 -->
+        <a href="#x" class="overlay" id="win1"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+<!-- Модальное окно №2 -->
+        <a href="#x" class="overlay" id="win2"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+<!-- Модальное окно №3 -->
+        <a href="#x" class="overlay" id="win3"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+<!-- Модальное окно №4 -->
+        <a href="#x" class="overlay" id="win4"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+<!-- Модальное окно №5 -->
+        <a href="#x" class="overlay" id="win5"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-2.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+<!-- Модальное окно №6 -->
+        <a href="#x" class="overlay" id="win6"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-3.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
 	
 	<footer class="main-footer-page clearfix">
 	
