--- a/soft.html
+++ b/soft.html
@@ -37,7 +37,7 @@
 	</header>
 
 	
-	<main class="container-page">
+	<main class="container-page clearfix">
 	
 		<div class="image-1">
 		
@@ -45,9 +45,62 @@
 		
 		<hr class="hr-first">
 		
-		<h1 class="block-1 fig">Небольшой текст,<br>миссия инди-студии.</h1>
+		<h1 class="block-1 fig">Non-Linear Book Builder.</h1>
+		
+		<div class="block-2 clearfix">
+		
+			<a href="#win1"><img class="soft-image-1" src="img/nlbb-1.png" width="312" height="186" alt=""></a>	
+			<a href="#win2"><img class="soft-image-2" src="img/nlbb-2.png" width="312" height="186" alt=""></a>		
+			<a href="#win3"><img class="soft-image-3" src="img/nlbb-3.png" width="312" height="186" alt=""></a>
+		
+		</div>
+		
+		<div class="white-block">
 			
-		<p class="block-2 fig">Типа мы такие-то, такие-то, с гордостью передставляем вам...</p>
+		<p class="block-3 fig">Решив делать игры в жанре Interactive Fiction, мы изучили существующие движки для подобного рода игр и поняли, что при создании большой игры требуется написать огромное количество кода, который неизбежно оказывается запутанным, сложным для понимания и навигации, особенно если речь идёт о создании нелинейной игры с большим количеством выборов, поэтому решили сделать визуальный инструмент в котором вы можете видеть граф вашей истории в удобном и наглядном виде, а программа берёт на себя генерацию кода. Редактором также предусмотрены различные инструменты для поиска по тексту и поиска конечных параграфов. NLBB позволяет любому человеку, даже без знаний программирования, создать свою игру.
+		</p>
+		<p class="block-3 fig">
+		Редактор называется NLBB (Non-Linear Book Builder), что можно перевести как: «создатель нелинейных книг». Но пусть вас не смущает простота названия, NLBB обладает достаточно широким спектром возможностей. С его помощью вы сможете создавать игры в жанре Visual Novel, Point & Click, Hidden Object, а также игры в стиле популярных текстовых историй Choice Of Games. Абсолютно все наши игры сделаны в NLBB.
+		Редактор полностью бесплатный, с открытым кодом. Над его созданием я начал работать более двух лет назад и до сих пор продолжаю совершенствовать, добавлять новые функции. Главный плюс  NLBB в том, что он визуальный. Локация отображается в виде прямоугольника, а переход между локациями – в виде стрелочки.
+		</p>
+		<p class="block-3 fig">
+		C помощью NLBB  можно за день создать короткую, но полноценную игру с несложной механикой. Но не скрою, что для создания грандиозных проектов со сложной механикой без знаний по программированию всё же не обойтись. Теперь хотелось бы привести пару примеров сложных функций реализованных в NLBB:
+		<p>
+		<ol>
+			<li>Возможность в одной и той же локации разместить несколько разных кусочков текста. Например: у вас имеется ключевая локация в которой сходятся несколько веток. Попадая в ключевую локацию с разных веток, ГГ может обладать различными знаниями, опытом, навыками и так далее, ведь на каждой ветке с ним происходили разные события. Таким образом, в ключевой локации будет подставляться необходимый кусочек текста, в зависимости от того, с какой ветки прибыл ГГ. Это поможет сделать сюжет более сложным и интересным, а текст в игре более разнообразным, при этом схема не будет перегружена.</li>
+			<li>Также, существует возможность к одной и той же локации установить несколько разных картинок, которые будут показываться в зависимости от выполнившихся на данный момент условий.</li>
+			<li>Возможность создания скриптов, которые могут запускаться при посещении локации или при переходе по ссылкам.</li>
+		</ol>
+		<p class="block-3 fig">
+		Это лишь небольшой перечень того, что умеет  NLBB, который  к тому же постоянно развивается. Создать игру в  NLBB гораздо быстрее, удобнее и проще чем на бумаге, в Word или Excel. (Некоторые до сих пор предпочитают данные способы любому из существующих редакторов). Вы можете сделать набросок будущей игры, затем изменять, развивать и совершенствовать ваше творение и при этом, благодаря имеющемуся версионному контролю, быть уверенным в сохранности всех этапов разработки. Безусловно, существуют и другие редакторы для создания interactive fiction, но NLBB благодаря своей наглядности и простоте использования, будет полезен как начинающим, так и опытным игроделам.
+		</p>
+
+		<a class="nlbb-download-link" href="/1.html"><span>Скачать NLBB 0.10.x (Текущая версия)</span></a>
+		
+		</div>
+		
+		<!--МОДАЛЬНЫЕ ОКНА-->
+
+		<!-- Модальное окно №1 -->
+        <a href="#x" class="overlay" id="win1"></a>
+        <div class="popup">
+			<img class="is-image" src="img/nlbb-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №2 -->
+        <a href="#x" class="overlay" id="win2"></a>
+        <div class="popup">
+			<img class="is-image" src="img/nlbb-2.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №3 -->
+        <a href="#x" class="overlay" id="win3"></a>
+        <div class="popup">
+			<img class="is-image" src="img/nlbb-3.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
 	
 	</main>
 	
@@ -65,7 +118,7 @@
 			
 			<a class="social-btn social-btn-vk" href = "https://vk.com/nlbproject" target="blank"><img src="img/vk-icon.png" width="20" height="12" alt=""></a>
 			
-			<a class="social-btn social-btn-fb" href = "https://www.facebook.com/antokolos" target="blank"><img src="img/fb-icon.png" width="10" height="19" alt=""></a>
+			<a class="social-btn social-btn-fb" href = "https://www.facebook.com/nlbproject/" target="blank"><img src="img/fb-icon.png" width="10" height="19" alt=""></a>
 			
 			<a class="social-btn social-btn-youtube" href = "https://www.youtube.com/channel/UCEeM6BnLfqBrETLmvD2E0iw/videos?shelf_id=0&sort=dd&view=0" target="blank"><img src="img/youtube-icon.png" width="20" height="16" alt=""></a>
 				
