--- a/soft.html
+++ b/soft.html
@@ -56,6 +56,27 @@
 		</div>
 		
 		<div class="white-block">
+		
+		<h2 class="fig lesson-one">Что такое NLBB?</h2>
+		
+		<p class="block-3 fig">
+		NLBB - это редактор, который был разработан специально для создания интерактивной литературы с разветвлённым сюжетом. С его помощью вы сможете сделать игры в жанре Visual Novel, Point & Click, Hidden Object, а также игры в стиле популярных текстовых историй Choice Of Games.
+		</p>
+		
+		<h2 class="fig lesson-one">Ключевые особенности</h2>
+		
+		<ol>
+			<li>Редактор NLBB – визуальный, то есть вы сможете видеть граф (схему) вашей истории в удобном и наглядном виде.</li>
+			<li>NLBB – кроссплатформенный (Windows, Mac, Linux).</li>
+			<li>Поддерживает экспорт в несколько форматов (QSP, INSTEAD, URQ, PDF, HTML и другие).</li>
+			<li>NLBB – бесплатный, с открытым кодом.</li>
+			<li>Редактор поддерживает скрипты, для создания более сложных историй.</li>
+			<li>Возможность для каждой локации установить одну картинку (или несколько, нужная будет выбираться в зависимости от указанного условия) и мелодию.</li>
+			<li>Поддержка версионного контроля. Возможность работать над одной и той же игрой в соавторстве или просто облегчать себе работу на разных компьютерах.</li>
+			<li>Текст в схему может быть внесён на двух языках: русском и английском (в будущем добавятся другие языки).</li>
+		</ol>
+		
+		<h2 class="fig lesson-one">Еще немного о NLBB</h2>
 			
 		<p class="block-3 fig">Решив делать игры в жанре Interactive Fiction, мы изучили существующие движки для подобного рода игр и поняли, что при создании большой игры требуется написать огромное количество кода, который неизбежно оказывается запутанным, сложным для понимания и навигации, особенно если речь идёт о создании нелинейной игры с большим количеством выборов, поэтому решили сделать визуальный инструмент в котором вы можете видеть граф вашей истории в удобном и наглядном виде, а программа берёт на себя генерацию кода. Редактором также предусмотрены различные инструменты для поиска по тексту и поиска конечных параграфов. NLBB позволяет любому человеку, даже без знаний программирования, создать свою игру.
 		</p>
@@ -76,6 +97,51 @@
 		</p>
 
 		<a class="nlbb-download-link" href="/1.html"><span>Скачать NLBB 0.10.x (Текущая версия)</span></a>
+		
+		<hr>
+		
+		<h2 class="fig lesson-one">Урок первый</h2>
+		
+		<p class="block-3 fig">
+		Всем привет!
+		</p>
+		<p class="block-3 fig">
+		Чтобы создать локацию, нужно на панели инструментов выбрать кнопку со свитком. Затем, кликнуть левой кнопкой мыши в том участке рабочего поля, где вы хотите разместить локацию. После того, как вы создали нужное количество локаций, надо снова кликнуть по кнопке со свитком чтобы отключить этот инструмент.
+		</p>
+		<p class="block-3 fig">
+		Далее необходимо обозначить стартовую локацию. Для этого кликните по локации, чтобы выделить её. Локация стала серого цвета, это значит что мы её выделили. Теперь, нажмите кнопку с английской буквой «S», после чего ещё раз кликните по выделенной локации. В левом верхнем углу появилась буква «S».
+		</p>
+		<p class="block-3 fig">
+		Теперь проведём ссылки. Для этого нужно выбрать кнопку со стрелочкой. Теперь кликнуть по отправной локации, а затем по локации в которую игрок должен попасть. Далее нужно снова кликнуть по кнопке со стрелочкой, чтобы отключить. На схеме теперь мы видим несколько локаций с переходами. Под стрелками (или ссылками), по умолчанию появляется слово «далее».
+		</p>
+		<p class="block-3 fig">
+		Чтобы прописать выбор, нужно дважды кликнуть по стрелке или по слову «далее». Откроется диалоговое окно. В строке Link text удаляем «далее» и вписываем свой текст, например: «Поискать питьевую воду». Теперь нажимаем кнопку «ОК». На другой ссылке напишем: «Или ещё немного поспать». «Исследовать местность где я оказался». Теперь, кликнем дважды по отправной локации и откроем вкладку Links. Здесь мы видим те выборы, которые будут у игрока. Если вы хотите поменять последовательность в которой выборы появятся на экране, то выделите строку, а затем переместите её вниз с помощью кнопки «Move down»либо вверх с помощью кнопки «Move up», затем нажмите «ОК».
+		</p>
+		<p class="block-3 fig">
+		Теперь добавим в локации текст. Для этого дважды кликнем по локации чтобы открыть диалоговое окно. В большом белом поле именуемом Page text впишите свой текст. Но так как в NLBB отсутствует проверка орфографии и пунктуации, лучше печатать текст например в Word, а затем просто скопировать и вставить в локацию, после чего нажать «ОК». Если вы не нажмёте «ОК», сделанные вами изменения не сохранятся!
+		</p>
+		<p class="block-3 fig">
+		Чтобы лучше ориентироваться в схеме, можно нумеровать локации и делать краткое описание событий, которые в ней происходят. Для этого кликните дважды по локации и в строке Page caption сделайте требуемые пометки, затем не забудьте нажать «ОК». То, что вы напишете в строке  Page caption, будете видеть только вы, читателю/игроку эта информация не будет видна. Но если вы поставите галочку рядом со словом Use, то текст из строки  Page caption появится в вашей игре в верхней части экрана и, соответственно, будет виден игроку.
+		</p>
+		<p class="block-3 fig">
+		Вспомогательный текст появился, но он виден не полностью. Чтобы он стал виден целиком, можно увеличить площадь прямоугольника. Для этого нужно навести курсор на одну из полосочек, расположенных с каждой стороны прямоугольника, так, чтобы она стала красного цвета. Теперь, зажмите левую кнопку мыши и передвиньте полоску вверх или вниз, а те, что находятся по бокам прямоугольника – влево или вправо. Таким образом, вы увеличиваете прямоугольник в ширину и в длину.
+		</p>
+		<p class="block-3 fig">
+		Если вам необходимо удалить ненужную локацию, кликните по ней чтобы выделить, а затем нажмите кнопку с изображением листа бумаги с красным крестиком. Имейте ввиду, локация будет удалена вместе с входящей в неё ссылкой. Если нужно удалить ссылку, то кликните по ней чтобы выделить. Затем нажмите ту же кнопку с крестиком. Если вы передумали, и хотите вернуть удалённый объект, можно воспользоваться Undo/Redo. На панели инструментов они изображены в виде двух светло-синих стрелок.Когда ваша схема начнёт разрастаться, вам возможно захочется переместить прямоугольники – локации, чтобы схема выглядела более аккуратно. Для этого наведите курсор на прямоугольник, и когда увидите, что он стал красного цвета, зажмите левую кнопку мыши и переместите локацию в нужную вам часть рабочего поля. Чтобы перемещаться относительно схемы, просто переведите курсор на свободную часть рабочего поля и, зажав левую кнопку мыши, 
+		переместитесь в любом направлении.
+		</p>
+		<p class="block-3 fig">
+		Также, для удобства на панели инструментов имеются две кнопки с изображением лупы. Та что со знаком минус – уменьшит схему, со знаком плюс – увеличит. А вот лупа с изображением следов – это кнопка поиска. Нажав её вы вызовете окно. В строке Search text введите число или слово. Если захотите найти локацию по номеру, обязательно поставьте галочку для поиска слова целиком (Whole words). Далее, нажмите «Search». Вам выпадут результаты поиска (это может быть одна строка или несколько). Выберите нужную строку и выделите её, кликнув по ней один раз. Затем, нажмите «Go to». Программа переместит вас к искомой локации или ссылке. К сожалению, найденная локация никак не будет выделена из общей массы, но она появится в центре экрана, поэтому для лучшей идентификации перед тем как начать поиск, увеличьте схему, используя кнопку с лупой.
+		</p>
+		<p class="block-3 fig">
+		Чтобы поиграть в то, что получилось, можно запустить игру через браузер (но если ваша игра слишком сложная, то такой вариант запуска может не сработать). Чтобы поиграть через браузер, необходимо сохранить ваш проект, затем закрыть ваш проект и редактор, а затем, заново всё открыть. Это нужно для того, чтобы из памяти редактора окончательно стёрлись все ссылки и локации которые мы создавали, но в процессе работы удалили. Теперь кликните кнопку с изображением сервера. Всё, наслаждайтесь созданной вами игрой!
+		</p>
+		<p class="block-3 fig">
+		И самое главное: не забывайте периодически сохранять вашу работу. Здесь вам поможет кнопка с изображением дискеты.
+		</p>
+		<p class="block-3 fig">
+		В следующем уроке мы поговорим о том, как создать ключевые слова, вставить в игру картинки и музыку, а также как экспортировать игру любой сложности для запуска в инстеде.
+		</p>
 		
 		</div>
 		
