--- a/games.html
+++ b/games.html
@@ -6,7 +6,7 @@
 		<title>NLB project</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style-games.css">
 	
 	</head>
 
@@ -39,8 +39,49 @@
 	
 	<main class="container-page">
 	
+	<div class="image-1">
 	
-
+	</div>
+	
+	<hr class="hr-first">
+	
+	<div class="white-block">
+	
+		<h2 class="fig">Wild Island Quest</h2>
+		
+			<a href="#win1"><img class="img-1" src="img/red-1.png" width="312" height="186" alt=""></a>	
+			<a href="#win2"><img class="img-2" src="img/red-2.png" width="312" height="186" alt=""></a>		
+			<a href="#win3"><img class="img-3" src="img/red-3.png" width="312" height="186" alt=""></a>
+		
+		<p class="text-1 fig">
+		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
+		Вы можете отправиться на Дикий Остров с главными героями, чтобы вместе пережить полное опасностей приключение. Возьмите с собой одного или нескольких друзей, но помните, что все персонажи имеют как сильные, так и слабые стороны, а значит, от того кто с вами пойдёт, будет зависеть исход всего путешествия. Собираясь в дорогу, тщательно планируйте свои действия, берите только самое необходимое, любая мелочь может повлиять на события в пути. 
+		Наслаждайтесь природой Дикого Острова и берегитесь его обитателей!
+		</p>
+		
+		<h2 class="fig">Ключевые особенности</h2>
+		
+		<ul>
+			<li>Нелинейный сюжет.</li> 
+			<li>Несколько разных концовок.</li>
+			<li>Возможность отправиться в путешествие одному или с друзьями.</li>
+			<li>Каждый персонаж имеет сильные и слабые стороны, поэтому может как принести пользу, так и невольно навредить.</li>
+			<li>Уникальная картинка к каждой локации.</li>
+		</ul>
+	
+		<div class="steam fig">
+		
+			<iframe src="http://store.steampowered.com/widget/392820/?t=%D0%92%20%D0%B1%D0%B5%D1%81%D0%BA%D1%80%D0%B0%D0%B9%D0%BD%D0%B5%D0%BC%20%D0%B2%D0%BE%D0%B7%D0%B4%D1%83%D1%88%D0%BD%D0%BE%D0%BC%20%D0%BE%D0%BA%D0%B5%D0%B0%D0%BD%D0%B5%20%D1%87%D1%83%D0%B6%D0%BE%D0%B3%D0%BE%20%D0%BC%D0%B8%D1%80%D0%B0%20%D0%BE%D0%B4%D0%B8%D0%BD%D0%BE%D0%BA%D0%BE%20%D0%BF%D0%B0%D1%80%D1%8F%D1%82%20%D0%BD%D0%B0%D0%B4%20%D0%B1%D0%B5%D0%B7%D0%B4%D0%BD%D0%BE%D0%B9%20%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B2%D0%B0%20-%20%D0%BD%D0%B5%D0%B1%D0%BE%D0%BB%D1%8C%D1%88%D0%B8%D0%B5%20%D0%BA%D0%BB%D0%BE%D1%87%D0%BA%D0%B8%20%D1%81%D1%83%D1%88%D0%B8.%20%D0%9D%D0%BE%20%D0%B8%D0%BD%D0%BE%D0%B3%D0%B4%D0%B0%20%D0%BE%D0%BD%D0%B8%20%D1%81%D0%B1%D0%BB%D0%B8%D0%B6%D0%B0%D1%8E%D1%82%D1%81%D1%8F%2C%20%D0%B8%20%D0%B7%D0%B5%D0%BC%D0%BB%D0%B8%2C%20%D0%B4%D0%BE%D1%81%D0%B5%D0%BB%D0%B5%20%D0%BD%D0%B5%D0%B7%D0%BD%D0%B0%D0%BA%D0%BE%D0%BC%D1%8B%D0%B5%20%D0%B4%D1%80%D1%83%D0%B3%20%D1%81%20%D0%B4%D1%80%D1%83%D0%B3%D0%BE%D0%BC%2C%20%D0%BE%D1%82%D0%BA%D1%80%D1%8B%D0%B2%D0%B0%D1%8E%D1%82%20%D1%81%D0%B2%D0%BE%D0%B8%20%D1%82%D0%B0%D0%B9%D0%BD%D1%8B." frameborder="0" width="646" height="190">
+			
+			</iframe>
+	
+		</div>
+	
+	</div>
+	
+	<hr class="hr-lost">
+	
+	</main>
 	
 	<footer class="main-footer-page clearfix">
 	
