--- a/games.html
+++ b/games.html
@@ -47,11 +47,45 @@
 	
 	<div class="white-block">
 	
-		<h2 class="fig">Wild Island Quest</h2>
+		<h2 class="fig">Возвращение Красной Шапочки</h2>
 		
 			<a href="#win1"><img class="img-1" src="img/red-1.png" width="312" height="186" alt=""></a>	
 			<a href="#win2"><img class="img-2" src="img/red-2.png" width="312" height="186" alt=""></a>		
 			<a href="#win3"><img class="img-3" src="img/red-3.png" width="312" height="186" alt=""></a>
+		
+		<p class="text-1 fig">
+		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений! 
+
+		Побывайте в логове волка и разгадайте его секрет. Или попробуйте приручить дикого зверя. 
+
+		Съешьте пирожок с грибами и испытайте неизведанное, или накормите старушку, ведь грибная начинка – её любимая. 
+
+		Узнайте, наконец, какова истинная причина нападения волка на бабку Красной Шапочки. 
+		</p>
+		
+		<h2 class="fig">Особенности</h2>
+		
+		<ul>
+			<li>Множество концовок.</li> 
+			<li>Триллер, мелодрама и комедия в одной игре.</li>
+			<li>Более 150 ярких 3D сцен.</li>
+			<li>Кроссплатформенность.</li>
+			<li>Карточки.</li>
+			<li>Достижения.</li>
+			<li>Steam Cloud.</li>
+		</ul>
+	
+		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=741019644" target="blank"><span>Игра в Steam Greenlight</span></a>
+	
+	</div>
+	
+	<div class="white-block">
+	
+		<h2 class="fig">Wild Island Quest</h2>
+		
+			<a href="#win1"><img class="img-4" src="img/red-1.png" width="312" height="186" alt=""></a>	
+			<a href="#win2"><img class="img-5" src="img/red-2.png" width="312" height="186" alt=""></a>		
+			<a href="#win3"><img class="img-6" src="img/red-3.png" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
@@ -76,10 +110,125 @@
 			</iframe>
 	
 		</div>
+		
+	</div>
+		
+	<div class="white-block">
 	
+		<h2 class="fig">Варвар</h2>
+		
+			<a href="#win1"><img class="img-4" src="img/red-1.png" width="312" height="186" alt=""></a>	
+			<a href="#win2"><img class="img-5" src="img/red-2.png" width="312" height="186" alt=""></a>		
+			<a href="#win3"><img class="img-6" src="img/red-3.png" width="312" height="186" alt=""></a>
+		
+		<p class="text-1 fig">
+		Легендарный герой Конан попал в город Замбулу, где его ждало очередное приключение. Ему необходимо разобраться, что же происходит здесь на самом деле.
+		</p>
+		
+		<h2 class="fig">Ключевые особенности</h2>
+		
+		<ul>
+			<li>Особенности.</li> 
+		</ul>
+	
+		<a class="sort-column-1-link" href="/1.html"><span>Игра в Steam Greenlight</span></a>
+		
 	</div>
 	
 	<hr class="hr-lost">
+	
+	
+	<!--МОДАЛЬНЫЕ ОКНА-->
+
+		<!-- Модальное окно №1 -->
+        <a href="#x" class="overlay" id="win1"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №2 -->
+        <a href="#x" class="overlay" id="win2"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-2.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №3 -->
+        <a href="#x" class="overlay" id="win3"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-3.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		
+		
+		<!-- Модальное окно №4 -->
+        <a href="#x" class="overlay" id="win4"></a>
+        <div class="popup">
+			<img class="is-image" src="img/red-4.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+	
+		<!-- Модальное окно №5 -->
+        <a href="#x" class="overlay" id="win5"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №6 -->
+        <a href="#x" class="overlay" id="win6"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-2.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		
+		
+		<!-- Модальное окно №7 -->
+        <a href="#x" class="overlay" id="win7"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-3.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №8 -->
+        <a href="#x" class="overlay" id="win8"></a>
+        <div class="popup">
+			<img class="is-image" src="img/island-4.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №9 -->
+        <a href="#x" class="overlay" id="win9"></a>
+        <div class="popup">
+			<img class="is-image" src="img/barbarian-1.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		
+		
+		<!-- Модальное окно №10 -->
+        <a href="#x" class="overlay" id="win10"></a>
+        <div class="popup">
+			<img class="is-image" src="img/barbarian-2.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №11 -->
+        <a href="#x" class="overlay" id="win11"></a>
+        <div class="popup">
+			<img class="is-image" src="img/barbarian-3.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
+		
+		<!-- Модальное окно №12 -->
+        <a href="#x" class="overlay" id="win12"></a>
+        <div class="popup">
+			<img class="is-image" src="img/barbarian-4.png" alt=""/>
+			<a class="close" title="Закрыть" href="#close"></a>
+        </div>
 	
 	</main>
 	
