--- a/games.html
+++ b/games.html
@@ -45,7 +45,7 @@
 	
 	<hr class="hr-first">
 	
-	<div class="white-block">
+	<div class="white-block background-image-1">
 	
 		<h2 class="fig">Возвращение Красной Шапочки</h2>
 		
@@ -79,13 +79,13 @@
 	
 	</div>
 	
-	<div class="white-block">
+	<div class="white-block background-image-2">
 	
 		<h2 class="fig">Wild Island Quest</h2>
 		
-			<a href="#win1"><img class="img-4" src="img/red-1.png" width="312" height="186" alt=""></a>	
-			<a href="#win2"><img class="img-5" src="img/red-2.png" width="312" height="186" alt=""></a>		
-			<a href="#win3"><img class="img-6" src="img/red-3.png" width="312" height="186" alt=""></a>
+			<a href="#win4"><img class="img-1" src="img/island-5.png" width="312" height="186" alt=""></a>	
+			<a href="#win5"><img class="img-2" src="img/island-6.png" width="312" height="186" alt=""></a>		
+			<a href="#win6"><img class="img-3" src="img/island-7.png" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
@@ -117,9 +117,9 @@
 	
 		<h2 class="fig">Варвар</h2>
 		
-			<a href="#win1"><img class="img-4" src="img/red-1.png" width="312" height="186" alt=""></a>	
-			<a href="#win2"><img class="img-5" src="img/red-2.png" width="312" height="186" alt=""></a>		
-			<a href="#win3"><img class="img-6" src="img/red-3.png" width="312" height="186" alt=""></a>
+			<a href="#win7"><img class="img-1" src="img/red-1.png" width="312" height="186" alt=""></a>	
+			<a href="#win8"><img class="img-2" src="img/red-2.png" width="312" height="186" alt=""></a>		
+			<a href="#win9"><img class="img-3" src="img/red-3.png" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Легендарный герой Конан попал в город Замбулу, где его ждало очередное приключение. Ему необходимо разобраться, что же происходит здесь на самом деле.
@@ -166,21 +166,21 @@
 		<!-- Модальное окно №4 -->
         <a href="#x" class="overlay" id="win4"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-4.png" alt=""/>
+			<img class="is-image" src="img/island-5.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 	
 		<!-- Модальное окно №5 -->
         <a href="#x" class="overlay" id="win5"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-1.png" alt=""/>
+			<img class="is-image" src="img/island-6.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №6 -->
         <a href="#x" class="overlay" id="win6"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-2.png" alt=""/>
+			<img class="is-image" src="img/island-7.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
