--- a/games.html
+++ b/games.html
@@ -49,9 +49,9 @@
 	
 		<h2 class="fig">Возвращение Красной Шапочки</h2>
 		
-			<a href="#win1"><img class="img-1" src="img/red-1.png" width="312" height="186" alt=""></a>	
-			<a href="#win2"><img class="img-2" src="img/red-2.png" width="312" height="186" alt=""></a>		
-			<a href="#win3"><img class="img-3" src="img/red-3.png" width="312" height="186" alt=""></a>
+			<a href="#win1"><img class="img-1" src="img/red-5.png" width="312" height="186" alt=""></a>	
+			<a href="#win2"><img class="img-2" src="img/red-6.png" width="312" height="186" alt=""></a>		
+			<a href="#win3"><img class="img-3" src="img/red-7.png" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений! 
@@ -115,27 +115,49 @@
 		
 	<div class="white-block">
 	
-		<h2 class="fig">Варвар</h2>
+		<h2 class="fig">Варвар и подземные пещеры</h2>
 		
-			<a href="#win7"><img class="img-1" src="img/red-1.png" width="312" height="186" alt=""></a>	
-			<a href="#win8"><img class="img-2" src="img/red-2.png" width="312" height="186" alt=""></a>		
-			<a href="#win9"><img class="img-3" src="img/red-3.png" width="312" height="186" alt=""></a>
+			<a href="#win7"><img class="img-1" src="img/barbarian-5.png" width="312" height="186" alt=""></a>	
+			<a href="#win8"><img class="img-2" src="img/barbarian-6.png" width="312" height="186" alt=""></a>		
+			<a href="#win9"><img class="img-3" src="img/barbarian-7.png" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
-		Легендарный герой Конан попал в город Замбулу, где его ждало очередное приключение. Ему необходимо разобраться, что же происходит здесь на самом деле.
+		Варвар и подземные пещеры -- это приключенческая визуальная новелла. 
+		</p>
+		<p class="text-1 fig">
+		Встречайте бесстрашного героя Рагнара и отправляйтесь вместе с ним на поиски приключений!
+		</p>
+		<p class="text-1 fig">
+		Вам предстоит понять, кто друг, а кто враг, кто манипулирует вами, а кому действительно нужна ваша помощь. А также, разобраться в хитросплетениях замысловатых интриг и разоблачить коварного злодея. 
+		</p>
+		<p class="text-1 fig">
+		Для этого у Рагнара имеется шесть навыков, каждый из которых по-своему влияет на развитие сюжета. Выбирайте три умения и – в путь! 
+		</p>
+		<p class="text-1 fig">
+		Будьте готовы к опасностям, сложному моральному выбору и не позволяйте лжи опутать вас липкой сетью, докопайтесь до истины! 
+		</p>
+		<p class="text-1 fig">
+		Найдите наилучшую концовку и получите самую большую награду! 
 		</p>
 		
 		<h2 class="fig">Ключевые особенности</h2>
 		
 		<ul>
-			<li>Особенности.</li> 
+			<li>Нелинейный сюжет (в стиле серии книг «Выбери себе приключение»)</li> 
+			<li>Несколько уникальных концовок</li> 
+			<li>Более 300 иллюстраций</li> 
+			<li>Мозаичный сюжет, который полностью откроется только после прохождения нескольких веток повествования </li> 
+			<li>Кроссплатформенность (Windows, Mac, Linux)</li>  
+			<li>Карточки и значки Steam</li>
+			<li>Достижения</li> 
+			<li>Поддержка Steam Cloud</li> 
 		</ul>
 	
-		<a class="sort-column-1-link" href="/1.html"><span>Игра в Steam Greenlight</span></a>
+		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=684708653"><span>Игра в Steam Greenlight</span></a>
 		
 	</div>
 	
-	<hr class="hr-lost">
+	<hr class="hr-last">
 	
 	
 	<!--МОДАЛЬНЫЕ ОКНА-->
@@ -143,21 +165,21 @@
 		<!-- Модальное окно №1 -->
         <a href="#x" class="overlay" id="win1"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-1.png" alt=""/>
+			<img class="is-image" src="img/red-5.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №2 -->
         <a href="#x" class="overlay" id="win2"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-2.png" alt=""/>
+			<img class="is-image" src="img/red-6.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №3 -->
         <a href="#x" class="overlay" id="win3"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-3.png" alt=""/>
+			<img class="is-image" src="img/red-7.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
@@ -189,21 +211,21 @@
 		<!-- Модальное окно №7 -->
         <a href="#x" class="overlay" id="win7"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-3.png" alt=""/>
+			<img class="is-image" src="img/barbarian-5.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №8 -->
         <a href="#x" class="overlay" id="win8"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-4.png" alt=""/>
+			<img class="is-image" src="img/barbarian-6.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №9 -->
         <a href="#x" class="overlay" id="win9"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-1.png" alt=""/>
+			<img class="is-image" src="img/barbarian-7.png" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
