--- a/contacts.html
+++ b/contacts.html
@@ -47,9 +47,10 @@
 		
 		<div class="white-block">
 		
+			<!-- VK Widget -->
 			<div id="vk_groups"></div>
 			<script type="text/javascript">
-			VK.Widgets.Group("vk_groups", {mode: 0, width: "220", height: "400"}, 1);
+			VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "400", height: "600", color1: 'FFFFFF', color2: '000000', color3: '5E81A8'}, 85687194);
 			</script>
 	
 		</div>
