--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,14 @@
 	
 	<body>
 	
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s); js.id = id;
+	js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.8";
+	fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 	
 	<header class="main-header clearfix">
 	
@@ -47,11 +55,15 @@
 		
 		<div class="white-block">
 		
+		<h2 class="fig">наши контакты в разных социальных сетях</h2>
+		
 			<!-- VK Widget -->
 			<div id="vk_groups"></div>
 			<script type="text/javascript">
 			VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "400", height: "600", color1: 'FFFFFF', color2: '000000', color3: '5E81A8'}, 85687194);
 			</script>
+			
+			<div class="fb-page" data-href="https://www.facebook.com/nlbproject/" data-tabs="timeline" data-width="400" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nlbproject/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nlbproject/">NLB project</a></blockquote></div>
 	
 		</div>
 		
