--- a/contacts.html
+++ b/contacts.html
@@ -68,6 +68,8 @@
 				</script>
 			
 			</div>
+			
+			<a href="https://twitter.com/nlbproject" class="twitter-follow-button" data-show-count="false">Follow @nlbproject</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
 		</div>
 		
