--- a/contacts.html
+++ b/contacts.html
@@ -55,7 +55,7 @@
 		
 		<div class="white-block">
 		
-			<h2 class="fig">наши контакты в разных социальных сетях</h2>
+			<h2 class="fig">наши контакты в социальных сетях</h2>
 			
 			<div class="fb-group">
 				<div class="fb-page" data-href="https://www.facebook.com/nlbproject/" data-tabs="timeline" data-width="400" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nlbproject/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nlbproject/">NLB project</a></blockquote></div>
@@ -69,7 +69,7 @@
 			
 			</div>
 			
-			<a href="https://twitter.com/nlbproject" class="twitter-follow-button" data-show-count="false">Follow @nlbproject</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a class="twitter-timeline" href="https://twitter.com/nlbproject">Tweets by nlbproject</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
 		</div>
 		
