--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@
 			
 			</div>
 			
-			<a class="twitter-timeline" href="https://twitter.com/nlbproject">Tweets by nlbproject</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a class="twitter-timeline" data-width="400" data-height="600" data-theme="light" href="https://twitter.com/nlbproject">Tweets by nlbproject</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
 		</div>
 		
