--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
 			
 		</div>
 		
-		<div class="white-block">
+		<div class="white-block clearfix">
 		
 			<h2 class="fig">наши контакты в социальных сетях</h2>
 			
