--- a/games.html
+++ b/games.html
@@ -49,9 +49,9 @@
 	
 		<h2 class="fig">Возвращение Красной Шапочки</h2>
 		
-			<a href="#win1"><img class="img-1" src="img/red-5.png" width="312" height="186" alt=""></a>	
-			<a href="#win2"><img class="img-2" src="img/red-6.png" width="312" height="186" alt=""></a>		
-			<a href="#win3"><img class="img-3" src="img/red-7.png" width="312" height="186" alt=""></a>
+			<a href="#win1"><img class="img-1" src="img/red-5.jpg" width="312" height="186" alt=""></a>	
+			<a href="#win2"><img class="img-2" src="img/red-6.jpg" width="312" height="186" alt=""></a>		
+			<a href="#win3"><img class="img-3" src="img/red-7.jpg" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений! 
@@ -83,9 +83,9 @@
 	
 		<h2 class="fig">Wild Island Quest</h2>
 		
-			<a href="#win4"><img class="img-1" src="img/island-5.png" width="312" height="186" alt=""></a>	
-			<a href="#win5"><img class="img-2" src="img/island-6.png" width="312" height="186" alt=""></a>		
-			<a href="#win6"><img class="img-3" src="img/island-7.png" width="312" height="186" alt=""></a>
+			<a href="#win4"><img class="img-1" src="img/island-5.jpg" width="312" height="186" alt=""></a>	
+			<a href="#win5"><img class="img-2" src="img/island-6.jpg" width="312" height="186" alt=""></a>		
+			<a href="#win6"><img class="img-3" src="img/island-7.jpg" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
@@ -105,9 +105,7 @@
 	
 		<div class="steam fig">
 		
-			<iframe src="http://store.steampowered.com/widget/392820/?t=%D0%92%20%D0%B1%D0%B5%D1%81%D0%BA%D1%80%D0%B0%D0%B9%D0%BD%D0%B5%D0%BC%20%D0%B2%D0%BE%D0%B7%D0%B4%D1%83%D1%88%D0%BD%D0%BE%D0%BC%20%D0%BE%D0%BA%D0%B5%D0%B0%D0%BD%D0%B5%20%D1%87%D1%83%D0%B6%D0%BE%D0%B3%D0%BE%20%D0%BC%D0%B8%D1%80%D0%B0%20%D0%BE%D0%B4%D0%B8%D0%BD%D0%BE%D0%BA%D0%BE%20%D0%BF%D0%B0%D1%80%D1%8F%D1%82%20%D0%BD%D0%B0%D0%B4%20%D0%B1%D0%B5%D0%B7%D0%B4%D0%BD%D0%BE%D0%B9%20%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B2%D0%B0%20-%20%D0%BD%D0%B5%D0%B1%D0%BE%D0%BB%D1%8C%D1%88%D0%B8%D0%B5%20%D0%BA%D0%BB%D0%BE%D1%87%D0%BA%D0%B8%20%D1%81%D1%83%D1%88%D0%B8.%20%D0%9D%D0%BE%20%D0%B8%D0%BD%D0%BE%D0%B3%D0%B4%D0%B0%20%D0%BE%D0%BD%D0%B8%20%D1%81%D0%B1%D0%BB%D0%B8%D0%B6%D0%B0%D1%8E%D1%82%D1%81%D1%8F%2C%20%D0%B8%20%D0%B7%D0%B5%D0%BC%D0%BB%D0%B8%2C%20%D0%B4%D0%BE%D1%81%D0%B5%D0%BB%D0%B5%20%D0%BD%D0%B5%D0%B7%D0%BD%D0%B0%D0%BA%D0%BE%D0%BC%D1%8B%D0%B5%20%D0%B4%D1%80%D1%83%D0%B3%20%D1%81%20%D0%B4%D1%80%D1%83%D0%B3%D0%BE%D0%BC%2C%20%D0%BE%D1%82%D0%BA%D1%80%D1%8B%D0%B2%D0%B0%D1%8E%D1%82%20%D1%81%D0%B2%D0%BE%D0%B8%20%D1%82%D0%B0%D0%B9%D0%BD%D1%8B." frameborder="0" width="646" height="190">
-			
-			</iframe>
+			<iframe src="http://store.steampowered.com/widget/392820/" frameborder="0" width="646" height="250"></iframe>
 	
 		</div>
 		
@@ -117,9 +115,9 @@
 	
 		<h2 class="fig">Варвар и подземные пещеры</h2>
 		
-			<a href="#win7"><img class="img-1" src="img/barbarian-5.png" width="312" height="186" alt=""></a>	
-			<a href="#win8"><img class="img-2" src="img/barbarian-6.png" width="312" height="186" alt=""></a>		
-			<a href="#win9"><img class="img-3" src="img/barbarian-7.png" width="312" height="186" alt=""></a>
+			<a href="#win7"><img class="img-1" src="img/barbarian-5.jpg" width="312" height="186" alt=""></a>	
+			<a href="#win8"><img class="img-2" src="img/barbarian-6.jpg" width="312" height="186" alt=""></a>		
+			<a href="#win9"><img class="img-3" src="img/barbarian-7.jpg" width="312" height="186" alt=""></a>
 		
 		<p class="text-1 fig">
 		Варвар и подземные пещеры -- это приключенческая визуальная новелла. 
@@ -165,21 +163,21 @@
 		<!-- Модальное окно №1 -->
         <a href="#x" class="overlay" id="win1"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-5.png" alt=""/>
+			<img class="is-image" src="img/red-5.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №2 -->
         <a href="#x" class="overlay" id="win2"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-6.png" alt=""/>
+			<img class="is-image" src="img/red-6.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №3 -->
         <a href="#x" class="overlay" id="win3"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-7.png" alt=""/>
+			<img class="is-image" src="img/red-7.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
@@ -188,21 +186,21 @@
 		<!-- Модальное окно №4 -->
         <a href="#x" class="overlay" id="win4"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-5.png" alt=""/>
+			<img class="is-image" src="img/island-5.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 	
 		<!-- Модальное окно №5 -->
         <a href="#x" class="overlay" id="win5"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-6.png" alt=""/>
+			<img class="is-image" src="img/island-6.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №6 -->
         <a href="#x" class="overlay" id="win6"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-7.png" alt=""/>
+			<img class="is-image" src="img/island-7.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
@@ -211,46 +209,24 @@
 		<!-- Модальное окно №7 -->
         <a href="#x" class="overlay" id="win7"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-5.png" alt=""/>
+			<img class="is-image" src="img/barbarian-5.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №8 -->
         <a href="#x" class="overlay" id="win8"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-6.png" alt=""/>
+			<img class="is-image" src="img/barbarian-6.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №9 -->
         <a href="#x" class="overlay" id="win9"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-7.png" alt=""/>
+			<img class="is-image" src="img/barbarian-7.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
-		
-		
-		<!-- Модальное окно №10 -->
-        <a href="#x" class="overlay" id="win10"></a>
-        <div class="popup">
-			<img class="is-image" src="img/barbarian-2.png" alt=""/>
-			<a class="close" title="Закрыть" href="#close"></a>
-        </div>
-		
-		<!-- Модальное окно №11 -->
-        <a href="#x" class="overlay" id="win11"></a>
-        <div class="popup">
-			<img class="is-image" src="img/barbarian-3.png" alt=""/>
-			<a class="close" title="Закрыть" href="#close"></a>
-        </div>
-		
-		<!-- Модальное окно №12 -->
-        <a href="#x" class="overlay" id="win12"></a>
-        <div class="popup">
-			<img class="is-image" src="img/barbarian-4.png" alt=""/>
-			<a class="close" title="Закрыть" href="#close"></a>
-        </div>
 	
 	</main>
 	
