--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 				  
 			</div>
 			
-				<a href="#win1"><img class="block-5-1" src="img/red-1.png" width="312" height="186" alt=""></a>	
-				<a href="#win2"><img class="block-5-2" src="img/red-2.png" width="312" height="186" alt=""></a>		
-				<a href="#win3"><img class="block-5-3" src="img/red-3.png" width="312" height="186" alt=""></a>
-				<a href="#win4"><img class="block-5-4" src="img/red-4.png" width="312" height="186" alt=""></a>
+				<a href="#win1"><img class="block-5-1" src="img/red-1.jpg" width="312" height="186" alt=""></a>	
+				<a href="#win2"><img class="block-5-2" src="img/red-2.jpg" width="312" height="186" alt=""></a>
+				<a href="#win3"><img class="block-5-3" src="img/red-3.jpg" width="312" height="186" alt=""></a>
+				<a href="#win4"><img class="block-5-4" src="img/red-4.jpg" width="312" height="186" alt=""></a>
 			
 		</section>
 		
@@ -78,10 +78,10 @@
 		
 			<div class="block-5">
 		<!--0.36-->
-				<a href="#win5"><img class="block-5-1" src="img/island-1.png" width="312" height="186" alt=""></a>	
-				<a href="#win6"><img class="block-5-2" src="img/island-2.png" width="312" height="186" alt=""></a>		
-				<a href="#win7"><img class="block-5-3" src="img/island-3.png" width="312" height="186" alt=""></a>
-				<a href="#win8"><img class="block-5-4" src="img/island-4.png" width="312" height="186" alt=""></a>
+				<a href="#win5"><img class="block-5-1" src="img/island-1.jpg" width="312" height="186" alt=""></a>	
+				<a href="#win6"><img class="block-5-2" src="img/island-2.jpg" width="312" height="186" alt=""></a>		
+				<a href="#win7"><img class="block-5-3" src="img/island-3.jpg" width="312" height="186" alt=""></a>
+				<a href="#win8"><img class="block-5-4" src="img/island-4.jpg" width="312" height="186" alt=""></a>
 			
 			</div>
 			
@@ -113,10 +113,10 @@
 				  
 			</div>
 			
-				<a href="#win9"><img class="block-5-1" src="img/barbarian-1.png" width="312" height="186" alt=""></a>	
-				<a href="#win10"><img class="block-5-2" src="img/barbarian-2.png" width="312" height="186" alt=""></a>		
-				<a href="#win11"><img class="block-5-3" src="img/barbarian-3.png" width="312" height="186" alt=""></a>
-				<a href="#win12"><img class="block-5-4" src="img/barbarian-4.png" width="312" height="186" alt=""></a>
+				<a href="#win9"><img class="block-5-1" src="img/barbarian-1.jpg" width="312" height="186" alt=""></a>	
+				<a href="#win10"><img class="block-5-2" src="img/barbarian-2.jpg" width="312" height="186" alt=""></a>		
+				<a href="#win11"><img class="block-5-3" src="img/barbarian-3.jpg" width="312" height="186" alt=""></a>
+				<a href="#win12"><img class="block-5-4" src="img/barbarian-4.jpg" width="312" height="186" alt=""></a>
 			
 		</section>
 		
@@ -149,28 +149,28 @@
 		<!-- Модальное окно №1 -->
         <a href="#x" class="overlay" id="win1"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-1.png" alt=""/>
+			<img class="is-image" src="img/red-1.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №2 -->
         <a href="#x" class="overlay" id="win2"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-2.png" alt=""/>
+			<img class="is-image" src="img/red-2.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №3 -->
         <a href="#x" class="overlay" id="win3"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-3.png" alt=""/>
+			<img class="is-image" src="img/red-3.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №4 -->
         <a href="#x" class="overlay" id="win4"></a>
         <div class="popup">
-			<img class="is-image" src="img/red-4.png" alt=""/>
+			<img class="is-image" src="img/red-4.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 	
@@ -179,28 +179,28 @@
 		<!-- Модальное окно №5 -->
         <a href="#x" class="overlay" id="win5"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-1.png" alt=""/>
+			<img class="is-image" src="img/island-1.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №6 -->
         <a href="#x" class="overlay" id="win6"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-2.png" alt=""/>
+			<img class="is-image" src="img/island-2.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №7 -->
         <a href="#x" class="overlay" id="win7"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-3.png" alt=""/>
+			<img class="is-image" src="img/island-3.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №8 -->
         <a href="#x" class="overlay" id="win8"></a>
         <div class="popup">
-			<img class="is-image" src="img/island-4.png" alt=""/>
+			<img class="is-image" src="img/island-4.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
@@ -209,28 +209,28 @@
 		<!-- Модальное окно №9 -->
         <a href="#x" class="overlay" id="win9"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-1.png" alt=""/>
+			<img class="is-image" src="img/barbarian-1.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №10 -->
         <a href="#x" class="overlay" id="win10"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-2.png" alt=""/>
+			<img class="is-image" src="img/barbarian-2.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №11 -->
         <a href="#x" class="overlay" id="win11"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-3.png" alt=""/>
+			<img class="is-image" src="img/barbarian-3.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 		
 		<!-- Модальное окно №12 -->
         <a href="#x" class="overlay" id="win12"></a>
         <div class="popup">
-			<img class="is-image" src="img/barbarian-4.png" alt=""/>
+			<img class="is-image" src="img/barbarian-4.jpg" alt=""/>
 			<a class="close" title="Закрыть" href="#close"></a>
         </div>
 	
