--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		
 	
 	</head>
 
@@ -14,7 +16,7 @@
 	<body>
 	
 	
-	<header class="main-header clearfix">
+	<header class="main-header clearfix" id="blfix">
 	
 		<div class="fixed-menu">
 	
@@ -272,7 +274,7 @@
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-mini.js"></script>
+	<script src="js/script.js" type="text/javascript"></script>
 	
 	</body>
 	
