--- a/games.html
+++ b/games.html
@@ -47,7 +47,7 @@
 	
 	<div class="white-block background-image-1">
 	
-		<h2 class="fig">Возвращение Красной Шапочки</h2>
+		<h2 class="fig">"Возвращение Красной Шапочки"</h2>
 		
 			<a href="#win1"><img class="img-1" src="img/red-5.jpg" width="312" height="186" alt=""></a>	
 			<a href="#win2"><img class="img-2" src="img/red-6.jpg" width="312" height="186" alt=""></a>		
@@ -81,7 +81,7 @@
 	
 	<div class="white-block background-image-2">
 	
-		<h2 class="fig">Wild Island Quest</h2>
+		<h2 class="fig">"Дикий остров"</h2>
 		
 			<a href="#win4"><img class="img-1" src="img/island-5.jpg" width="312" height="186" alt=""></a>	
 			<a href="#win5"><img class="img-2" src="img/island-6.jpg" width="312" height="186" alt=""></a>		
@@ -111,9 +111,9 @@
 		
 	</div>
 		
-	<div class="white-block">
+	<div class="white-block background-image-3">
 	
-		<h2 class="fig">Варвар и подземные пещеры</h2>
+		<h2 class="fig">"Варвар и подземные пещеры"</h2>
 		
 			<a href="#win7"><img class="img-1" src="img/barbarian-5.jpg" width="312" height="186" alt=""></a>	
 			<a href="#win8"><img class="img-2" src="img/barbarian-6.jpg" width="312" height="186" alt=""></a>		
