--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-contacts.css">
 		<script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 	</head>
 
@@ -32,9 +33,10 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link active-header-link" href="index.html">Главная</a></li>
+					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
 					<li><a class="link" href="games.html">Игры</a></li>
 					<li><a class="link" href="soft.html">Программы</a></li>
+					<li><a class="link" href="others.html">Авторы</a></li>
 					<li><a class="link" href="contacts.html">Контакты</a></li>
 					<li><a class="link" href="others.html">Прочее</a></li>
 				</ul>
@@ -46,7 +48,7 @@
 	</header>
 
 	
-	<main class="container-page clearfix">
+	<main class="container-page clearfix" id="blfix">
 	
 	
 		<div class="image-1">
@@ -228,7 +230,7 @@
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-mini.js"></script>
+	<script src="js/script-contacts.js" type="text/javascript"></script>
 	
 	</body>
 	
