--- a/games.html
+++ b/games.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-games.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 	</head>
 
@@ -14,7 +15,7 @@
 	<body>
 	
 	
-	<header class="main-header clearfix">
+	<header class="main-header clearfix" id="blfix">
 	
 		<div class="fixed-menu">
 	
@@ -23,9 +24,10 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link active-header-link" href="index.html">Главная</a></li>
+					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
 					<li><a class="link" href="games.html">Игры</a></li>
 					<li><a class="link" href="soft.html">Программы</a></li>
+					<li><a class="link" href="others.html">Авторы</a></li>
 					<li><a class="link" href="contacts.html">Контакты</a></li>
 					<li><a class="link" href="others.html">Прочее</a></li>
 				</ul>
@@ -42,7 +44,7 @@
 	<div class="image-1">
 	
 	</div>
-	
+	<p><a name="red"></a></p>
 	<hr class="hr-first">
 	
 	<div class="white-block background-image-1">
@@ -78,7 +80,8 @@
 		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=741019644" target="blank"><span>Игра в Steam Greenlight</span></a>
 	
 	</div>
-	
+	<p><a name="island"></a></p>
+	<hr>
 	<div class="white-block background-image-2">
 	
 		<h2 class="fig">"Дикий остров"</h2>
@@ -110,7 +113,8 @@
 		</div>
 		
 	</div>
-		
+	<p><a name="barbarian"></a></p>
+	<hr>
 	<div class="white-block background-image-3">
 	
 		<h2 class="fig">"Варвар и подземные пещеры"</h2>
@@ -268,7 +272,7 @@
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-mini.js"></script>
+	<script src="js/script-games.js" type="text/javascript"></script>
 	
 	</body>
 	
