--- a/soft.html
+++ b/soft.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-soft.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 	</head>
 
@@ -14,7 +15,7 @@
 	<body>
 	
 	
-	<header class="main-header clearfix">
+	<header class="main-header clearfix" id="blfix">
 	
 		<div class="fixed-menu">
 	
@@ -23,9 +24,10 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link active-header-link" href="index.html">Главная</a></li>
+					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
 					<li><a class="link" href="games.html">Игры</a></li>
 					<li><a class="link" href="soft.html">Программы</a></li>
+					<li><a class="link" href="others.html">Авторы</a></li>
 					<li><a class="link" href="contacts.html">Контакты</a></li>
 					<li><a class="link" href="others.html">Прочее</a></li>
 				</ul>
@@ -208,7 +210,7 @@
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-mini.js"></script>
+	<script src="js/script-soft.js" type="text/javascript"></script>
 	
 	</body>
 	
