--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
 	fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 	
-	<header class="main-header clearfix">
+	<header class="main-header clearfix" id="blfix">
 	
 		<div class="fixed-menu">
 	
@@ -48,7 +48,7 @@
 	</header>
 
 	
-	<main class="container-page clearfix" id="blfix">
+	<main class="container-page clearfix">
 	
 	
 		<div class="image-1">
