--- a/contacts.html
+++ b/contacts.html
@@ -208,7 +208,7 @@
 			
 			<a class="social-btn social-btn-fb" href = "https://www.facebook.com/antokolos" target="blank"><img src="img/fb-icon.png" width="10" height="19" alt=""></a>
 			
-			<a class="social-btn social-btn-youtube" href = "https://www.youtube.com/channel/UCEeM6BnLfqBrETLmvD2E0iw/videos?shelf_id=0&sort=dd&view=0" target="blank"><img src="img/youtube-icon.png" width="20" height="16" alt=""></a>
+			<a class="social-btn social-btn-youtube" href ="https://www.youtube.com/c/nlbproject" target="blank"><img src="img/youtube-icon.png" width="20" height="16" alt=""></a>
 				
 		</div>
 
