--- a/index.html
+++ b/index.html
@@ -275,8 +275,44 @@
 		
 		</div>
 		
+	<!— Yandex.Metrika informer —>
+<a href="https://metrika.yandex.ru/stat/?id=40388305&amp;f.."
+target="_blank" rel="nofollow" class="metrika"><img src="https://informer.yandex.ru/informer/40388305/3_1_FFFF.."
+style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="40388305" data-lang="ru" /></a>
+<!— /Yandex.Metrika informer —>
+
+<!— Yandex.Metrika counter —>
+<script type="text/javascript">
+(function (d, w, c) {
+(w[c] = w[c] || []).push(function() {
+try {
+w.yaCounter40388305 = new Ya.Metrika({
+id:40388305,
+clickmap:true,
+trackLinks:true,
+accurateTrackBounce:true
+});
+} catch(e) { }
+});
+
+var n = d.getElementsByTagName("script")[0],
+s = d.createElement("script"),
+f = function () { n.parentNode.insertBefore(s, n); };
+s.type = "text/javascript";
+s.async = true;
+s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+if (w.opera == "[object Opera]") {
+d.addEventListener("DOMContentLoaded", f, false);
+} else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/40388305" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!— /Yandex.Metrika counter —>
 	
 	</footer>
+	
+
 	
 	<!-- JAVA SCRIPT -->
 	
