--- a/games-eng.html
+++ b/games-eng.html
@@ -26,10 +26,10 @@
 				<ul>
 					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
 					<li><a class="link" href="games-eng.html">Games</a></li>
-					<li><a class="link" href="soft.html">Soft</a></li>
-					<li><a class="link" href="others.html">Team</a></li>
-					<li><a class="link" href="contacts.html">Contacts</a></li>
-					<li><a class="link" href="others.html">Other</a></li>
+					<li><a class="link" href="soft-eng.html">Soft</a></li>
+					<li><a class="link" href="others-eng.html">Team</a></li>
+					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
+					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
 				
 			</nav>
@@ -42,6 +42,10 @@
 	<main class="container-page">
 	
 	<div class="image-1">
+	
+		<a class="switch-lang eng-switch switch-activated" href="games-eng.html"><p>Eng</p></a>
+			
+		<a class="switch-lang rus-switch" href="games.html"><p>Rus</p></a>
 	
 	</div>
 	<p><a name="red"></a></p>
