--- a/games.html
+++ b/games.html
@@ -43,6 +43,10 @@
 	
 	<div class="image-1">
 	
+		<a class="switch-lang eng-switch" href="games-eng.html"><p>Eng</p></a>
+			
+		<a class="switch-lang rus-switch switch-activated" href="games.html"><p>Rus</p></a>
+	
 	</div>
 	<p><a name="red"></a></p>
 	<hr class="hr-first">
