--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		
 			<a class="switch-lang eng-switch" href="index-eng.html"><p>Eng</p></a>
 			
-			<a class="switch-lang rus-switch" href="index.html"><p>Rus</p></a>
+			<a class="switch-lang rus-switch switch-activated" href="index.html"><p>Rus</p></a>
 			
 		</div>
 		
