--- a/soft-eng.html
+++ b/soft-eng.html
@@ -6,7 +6,7 @@
 		<title>NLB project</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style-soft.css">
+		<link rel="stylesheet" type="text/css" href="css/style-soft-eng.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 	</head>
@@ -24,12 +24,12 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
-					<li><a class="link" href="games.html">Игры</a></li>
-					<li><a class="link" href="soft.html">Программы</a></li>
-					<li><a class="link" href="others.html">Авторы</a></li>
-					<li><a class="link" href="contacts.html">Контакты</a></li>
-					<li><a class="link" href="others.html">Прочее</a></li>
+					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
+					<li><a class="link" href="games-eng.html">Games</a></li>
+					<li><a class="link" href="soft-eng.html">Soft</a></li>
+					<li><a class="link" href="others-eng.html">Team</a></li>
+					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
+					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
 				
 			</nav>
@@ -43,9 +43,9 @@
 	
 		<div class="image-1">
 		
-			<a class="switch-lang eng-switch" href="soft-eng.html"><p>Eng</p></a>
+			<a class="switch-lang eng-switch switch-activated" href="soft-eng.html"><p>Eng</p></a>
 			
-			<a class="switch-lang rus-switch switch-activated" href="soft.html"><p>Rus</p></a>
+			<a class="switch-lang rus-switch" href="soft.html"><p>Rus</p></a>
 		
 		</div>
 		
