--- a/index-eng.html
+++ b/index-eng.html
@@ -27,10 +27,10 @@
 				<ul>
 					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
 					<li><a class="link" href="games-eng.html">Games</a></li>
-					<li><a class="link" href="soft.html">Soft</a></li>
-					<li><a class="link" href="others.html">Team</a></li>
-					<li><a class="link" href="contacts.html">Contacts</a></li>
-					<li><a class="link" href="others.html">Other</a></li>
+					<li><a class="link" href="soft-eng.html">Soft</a></li>
+					<li><a class="link" href="others-eng.html">Team</a></li>
+					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
+					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
 				
 			</nav>
@@ -45,7 +45,7 @@
 	
 		<div class="image-1 clearfix">
 		
-			<a class="switch-lang eng-switch" href="index-eng.html"><p>Eng</p></a>
+			<a class="switch-lang eng-switch switch-activated" href="index-eng.html"><p>Eng</p></a>
 			
 			<a class="switch-lang rus-switch" href="index.html"><p>Rus</p></a>
 			
@@ -275,6 +275,40 @@
 		
 		</div>
 		
+		<!— Yandex.Metrika informer —>
+<a href="https://metrika.yandex.ru/stat/?id=40388305&amp;f.."
+target="_blank" rel="nofollow" class="metrika"><img src="https://informer.yandex.ru/informer/40388305/3_1_FFFF.."
+style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="40388305" data-lang="ru" /></a>
+<!— /Yandex.Metrika informer —>
+
+<!— Yandex.Metrika counter —>
+<script type="text/javascript">
+(function (d, w, c) {
+(w[c] = w[c] || []).push(function() {
+try {
+w.yaCounter40388305 = new Ya.Metrika({
+id:40388305,
+clickmap:true,
+trackLinks:true,
+accurateTrackBounce:true
+});
+} catch(e) { }
+});
+
+var n = d.getElementsByTagName("script")[0],
+s = d.createElement("script"),
+f = function () { n.parentNode.insertBefore(s, n); };
+s.type = "text/javascript";
+s.async = true;
+s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+if (w.opera == "[object Opera]") {
+d.addEventListener("DOMContentLoaded", f, false);
+} else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/40388305" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!— /Yandex.Metrika counter —>
 	
 	</footer>
 	
