--- a/contacts-eng.html
+++ b/contacts-eng.html
@@ -53,9 +53,9 @@
 	
 		<div class="image-1">
 		
-			<a class="switch-lang eng-switch" href="contacts-eng.html"><p>Eng</p></a>
+			<a class="switch-lang eng-switch switch-activated" href="contacts-eng.html"><p>Eng</p></a>
 			
-			<a class="switch-lang rus-switch switch-activated" href="contacts.html"><p>Rus</p></a>
+			<a class="switch-lang rus-switch" href="contacts.html"><p>Rus</p></a>
 			
 		</div>
 		
