--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 		
-	
 	</head>
 
 	
