--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style-contacts.css">
 		<script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 	
 	</head>
 
